Address code smells